# akceleracja-obliczen

./: .gitignore  README.md  main.cpp
common/: file_utils.hpp  timer.hpp
cpu/: CMakeLists.txt  kmp.cpp  kmp_mp.cpp  main.cpp  omp.cpp
docs/: prototype-presentation.md
gpu/: CMakeLists.txt  Main.cpp  string_search_kernel.cl
text_files/: key10.txt  key2.txt  key3.txt  key4.txt  key5.txt  key6.txt  key7.txt  key9.txt  text1.txt  text2.txt  text3.txt  text4.txt  text5.txt  text6.txt  text7.txt  text8.txt  text9.txt
time_benchmarks/: chart.py  run_all.bat  split_text.py
