cmake_minimum_required(VERSION 3.1)
project(kmp_cpu LANGUAGES CXX)
include_directories("../common")
find_package(OpenMP REQUIRED)
add_executable(${PROJECT_NAME} main.cpp)
target_link_libraries(${PROJECT_NAME} PRIVATE OpenMP::OpenMP_CXX)
target_compile_features(${PROJECT_NAME} PRIVATE cxx_std_17)
if(MSVC)
  target_compile_options(${PROJECT_NAME} PRIVATE /W4 /WX)
else()
  target_compile_options(${PROJECT_NAME} PRIVATE -Wall -Wextra -Wpedantic)
endif()